Renders product collection

--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,7 @@
         <script src="bower_components/twbs-bootstrap-sass/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
         <script src="bower_components/twbs-bootstrap-sass/vendor/assets/javascripts/bootstrap/collapse.js"></script>
         <script src="bower_components/twbs-bootstrap-sass/vendor/assets/javascripts/bootstrap/tab.js"></script>
+        <script src="bower_components/holderjs/holder.js"></script>
         <!-- endbuild -->
 </body>
 </html>
